feat:validation page

--- a/src/app/modules/cart/cart-rows/cart-rows.component.html
+++ b/src/app/modules/cart/cart-rows/cart-rows.component.html
@@ -1,4 +1,4 @@
-<div class="middleContainer" [ngClass]="{'flex': !hasCartItems}">
+<div class="middleContainer" [ngClass]="{'flex': !hasCartItems, 'noMargin': !isFromBasket}">
     <div *ngIf="!hasCartItems" class="vertical-middle">
         <img src="/assets/images/watermelon.gif" alt="panier vide">
         <div class="emptyCartDiv">
