--- a/src/app/shared/components/header/header.component.scss
+++ b/src/app/shared/components/header/header.component.scss
@@ -53,7 +53,7 @@ ul li {
     display: flex;
     flex-direction: row;
     width: 100%;
-    height: 6.5rem;
+    height: 13vh;
 }
 
 .stickyHeader{
