--- a/src/styles.scss
+++ b/src/styles.scss
@@ -114,4 +114,5 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
   //background-image: url("/assets/images/KayCafetHomeBackground-min.png");
   //background-attachment: fixed;
   width: 100%;
+  min-height: 79vh;
 }
