--- a/src/app/modules/validation/validation.component.scss
+++ b/src/app/modules/validation/validation.component.scss
@@ -12,6 +12,11 @@
 }
 
 .goBackButton{
+    display: flex;
+    align-items: center;
+}
+
+.btn{
     cursor: pointer;
     border-radius: 4px!important;
     background-color: #4A4A4A;
@@ -19,8 +24,6 @@
     color: #fff;
     width: 200px;
     height: 2.5rem;
-    display: flex;
-    align-items: center;
 }
 
 .infosDiv{
@@ -53,13 +56,21 @@
 }
 
 .orderDivHeader{
-    padding-top: 20px;
-    padding-bottom: 20px;
     position: relative;
     background-color: #fff;
     display: flex;
     align-items: center;
     justify-content: center;
+}
+
+.infosDiv > div > .orderDivHeader {
+    margin-top: 20px;
+    margin-bottom: 20px;
+}
+
+.orderDiv > .orderDivHeader{
+    padding-top: 20px;
+    padding-bottom: 20px;
 }
 
 .orderDivName{
@@ -119,21 +130,48 @@
     display: flex;
     justify-content: center;
     margin-bottom: 1rem;
+    width: 95%;
+    align-self: center;
+    height: 2.5rem;
 }
 
-.formGroupDiv > input {
-    width: 46%;
+.formGroupDiv > div{
+    width: 50%;
+}
+
+
+.formGroupDiv > div > input{
     line-height: 1.8rem;
 }
 
-#emailInput, .payment > span{
+.formGroupDiv > div:first-child > input {
+    width: 95%;
+}
+
+.formGroupDiv > div:nth-child(2) > input {
+    width: 97%;
+}
+
+.mat-error{
+    font-size: 0.8rem;
+}
+
+#emailInput, .payment > span, .emailErrorMessage{
     line-height: 1.8rem;
     width: 94%;
     align-self: center;
 }
 
+.emailDiv, .phoneDiv{
+    display: flex;
+    flex-direction: column;
+}
+
+.emailDiv{
+    height: 2.3rem;
+}
+
 #fullNameInput{
-    margin-right: 1%;
     text-transform: capitalize;
 }
 
@@ -145,9 +183,22 @@
 #validOrder{
     align-self: center;
     width: 50%;
+    font-size: 1.1rem;
 }
 
-// .phoneDiv{
-//     display: flex;
-//     flex-direction: column;
-// }
+.agreeGeneralTerms{
+    cursor: pointer;
+}
+
+.generalConditionsDiv{
+    margin: 1.5rem 0 1.5rem 0;
+    display: flex;
+    flex-direction: column;
+
+    div{
+        justify-content: center;
+        span{
+            font-size: 14px;
+        }
+    }
+}
