--- a/src/app/modules/validation/validation.component.html
+++ b/src/app/modules/validation/validation.component.html
@@ -37,7 +37,7 @@
                         <input type="checkbox" class="agreeGeneralTerms" formControlName="agree">
                         <span>En cochant cette case, je reconnais avoir pris connaissance des Conditions Générales de vente</span>
                     </div>
-                    <mat-error *ngIf="agree.invalid && submitted" >Veuillez cocher la case afin d'accepter les condtions générales de ventes.</mat-error>
+                    <mat-error *ngIf="agree.invalid && submitted" >Veuillez cocher cette case afin d'accepter les condtions générales de ventes.</mat-error>
                 </div>
                 <button id="validOrder" class="btn" type="submit" >Valider</button>
             </div>
