--- a/src/app/modules/cart/cart-rows/cart-rows.component.html
+++ b/src/app/modules/cart/cart-rows/cart-rows.component.html
@@ -1,4 +1,4 @@
-<div class="middleContainer" [ngClass]="{'flex': !hasCartItems, 'noMargin': !isFromBasket}">
+<div class="middleContainer" [ngClass]="{'flex': !hasCartItems, 'notFromCart': !isFromBasket}">
     <div *ngIf="!hasCartItems" class="vertical-middle">
         <img src="/assets/images/watermelon.gif" alt="panier vide">
         <div class="emptyCartDiv">
@@ -10,7 +10,7 @@
         <div *ngFor="let item of cartItems" [ngClass]="{'nopadding': !isFromBasket}" class="basket-product">
             <div class="basketContainer">
                 <!-- <div *ngIf="item.Product.Photo" class="itemPhoto center-vertical"><img src="{{item.Product.Photo}}" alt="{{item.Product.Name}}"></div> -->
-                <div class="itemDescriptionBloc"> <!--fullwidth-->
+                <div class="itemDescriptionBloc" [ngClass]="{'notFromCart': !isFromBasket}"> <!--fullwidth-->
                     <div class="itemDescription text-title-regular capitalize">{{ item.Name}} <span *ngIf="!isFromBasket">x{{item.Quantity}}</span></div>
                     <div class="itemDescriptionLabel text-underline capitalize">{{ item.Description }}</div>
                     <div *ngIf="isFromBasket" class="itemPriceBlock">
