--- a/src/app/modules/home/home.component.scss
+++ b/src/app/modules/home/home.component.scss
@@ -197,21 +197,11 @@ img{
 }
 
 .addItemButton{
-    border-radius: 4px;
-    background: rgb(74, 74, 74);
-    font-weight: 600;
-    font-size: 15px;
-    line-height: 32px;
-    text-align: center;
-    vertical-align: middle;
-    color: #fff;
-    box-shadow: 0 2px 2px 0 rgba(0,0,0,.06);
-    min-width: 116px;
-    height: 32px;
-    position: relative;
+    width: 9rem;
+    height: 2rem;
     transition-duration: .2s;
-    cursor: pointer;
     margin: 0 0.4rem 0 0.4rem;
+    font-weight: 0.85rem;
 }
 
 .itemPriceBlock{
