--- a/src/app/modules/login/login.component.html
+++ b/src/app/modules/login/login.component.html
@@ -2,11 +2,10 @@
     <div class="container" id="container">
         <div class="form-container sign-up-container">
             <form action="#">
-                <h1>Crée ton compte</h1>
+                <h1>Créé ton compte</h1>
                 <div class="social-container">
                     <a href="#" class="social"><i class="fab fa-facebook-f"></i></a>
                     <a href="#" class="social"><i class="fab fa-google-plus-g"></i></a>
-                    <a href="#" class="social"><i class="fab fa-linkedin-in"></i></a>
                 </div>
                 <span>ou utilise une addresse email pour l'inscription</span>
                 <input type="text" placeholder="Nom" />
@@ -21,13 +20,14 @@
                 <div class="social-container">
                     <a href="#" class="social"><i class="fab fa-facebook-f"></i></a>
                     <a href="#" class="social"><i class="fab fa-google-plus-g"></i></a>
-                    <a href="#" class="social"><i class="fab fa-linkedin-in"></i></a>
                 </div>
                 <span>ou utilise ton compte</span>
                 <input formControlName="login" type="email" placeholder="Login" />
+                <mat-error *ngIf="signInFormSubmitted && login.invalid" >Veuillez renseigner votre login svp.</mat-error>
                 <input formControlName="password" type="password" placeholder="Password" />
+                <mat-error *ngIf="signInFormSubmitted && password.invalid" >Veuillez renseigner votre mot de passe svp.</mat-error>
                 <a href="#">Mot de passe oublié?</a>
-                <button type="submit" >Connexion</button>
+                <button [disabled]="signInForm.invalid" type="submit" >Connexion</button>
             </form>
         </div>
         <div class="overlay-container">
@@ -39,7 +39,7 @@
                 </div>
                 <div class="overlay-panel overlay-right">
                     <h1>Salut à toi, jeune entrepreneur!</h1>
-                    <p>remplit quelques infos et démarre l'aventure avec nous.</p>
+                    <p>Remplit quelques infos et démarre l'aventure avec nous.</p>
                     <button (click)="addRightPanelActive()" class="ghost" id="signUp">Inscription</button>
                 </div>
             </div>
